Fix image overflow on mobile

--- a/about/article.css
+++ b/about/article.css
@@ -19,8 +19,15 @@
     border: 2px dashed rgb(87, 87, 8);
 }
 
+img {
+    max-width: 100%;
+}
+
 @media(max-width: 1080px) {
     .panel {
         padding: 1em;
+    }
+    ol {
+        padding-left: 1em;
     }
 }
